Added my media links

--- a/popup.html
+++ b/popup.html
@@ -25,17 +25,17 @@
   <div class="modal-icons">
     <div class="flex-container">
         <div class="flex">
-            <a href="https://www.youtube.com/traversymedia" target="_blank">
+            <a href="https://www.youtube.com/channel/UCsinMWgI7pXJQGc0gwMXimg" target="_blank">
               <i class="fa fa-youtube"></i>
             </a>
         </div>
         <div class="flex">
-            <a href="https://www.facebook.com/traversymedia" target="_blank">
+            <a href="https://www.facebook.com/profile.php?id=100010798510454" target="_blank">
             <i class="fa fa-facebook"></i>
             </a>
         </div>
         <div class="flex">
-            <a href="https://www.github.com/bradtraversy" target="_blank">
+            <a href="https://github.com/jay51" target="_blank">
               <i class="fa fa-github"></i>
             </a>
         </div>
